k8s/test-certmanager.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-staging
  namespace: istio-system
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "dev.anuragnandre.online"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-gateway-tls
    hosts:
    - "dev.anuragnandre.online"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: certtest-virtual-service
  namespace: default
spec:
  hosts:
  - "dev.anuragnandre.online"
  gateways:
  - istio-system/gateway-staging
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: testpage
        port:
          number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: test-app
        image: nginxdemos/hello
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: testpage
spec:
  selector:
    app: test-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
